# stub

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
benchmark/: CMakeLists.txt  main.cpp
cmake/: prepare_vendored.cmake
src/: hello.cpp  main.cpp
test/: CMakeLists.txt  unit_stub.cpp
test/scripts/: run_and_compare.cmake
